# jean-browser-v1

./: .env.example  .env.jeantrail-os  API_Security_Best_Practices.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  IMPLEMENTATION_SUMMARY.md  JEANTRAIL_COMPLETE_ANALYSIS.md  JEANTRAIL_IMPLEMENTATION_PLAN.md  JEANTRAIL_RECOMMENDATIONS.md  JEANTRAIL_ROADMAP.md  JEAN_AI_INITIALIZER.ts  JEAN_COMPLETION_SUMMARY.md  PHASE1_SETUP.md  PROJECT_FINAL_STATUS.md  QWEN3_INTEGRATION.md  README.md  TROUBLESHOOTING.md  chat-export-1764893858894.json  docker-compose.jeantrail-os.yml  docker-compose.yml  eslint.config.js  generate_full_map.py  index.html  package-lock.json  package.json  project_snapshot.py  run.sh  snapshot.json  start-dev.sh  stop.bat  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts
backups_jean_demo/: JeanTrailDemo-jeantrail_project.tsx  JeanTrailDemo-src_backups.tsx  index.css.backup
database/: seed_data.sql
docs/: 404.html  index.html
jeantrail_project/: API_DOCUMENTATION.md  ARCH_STATE.md  AUDIT-CYCLE-LOG.md  AVATAR_MANIFEST_JEAN.md  BETA_README.md  BOARD-SIMULATION-RESULTS.md  CAPABILITY_REGISTRY_DESIGN.md  COMMERCE_PRESENTATION_LAYER.md  COMPLETE_IMPLEMENTATION.md  COMPONENTS_README.md  CORE_ARCHITECTURE.md  DATA_INTELLIGENCE_LAYER.md  DECISION_FREEZE_BETA.md  DECISION_TREE_NEXT_PHASE.md  DEVELOPER_PAGE_SPEC.md  DIGITAL_EXECUTION_STORE.md  DOMAIN-SEPARATION-PLAN.md  DecisionDiffReport.md  ECOMMERCE_ARCHITECTURE.md  EXECUTION_BLUEPRINT_ARCH.md  GOVERNANCE-LOCKED-SITE.md  GOVERNANCE-MANIFESTO.md  GOVERNANCE_AUDIT_v1.1.md  GOVERNANCE_LOCK_REPORT.md  GUARDRAILS_SAFETY_LEGAL.md  INVESTOR_MONETIZATION_NARRATIVE.md  JEAN-CERTIFIED-ECOSYSTEM.md  JEANTRAIL_DESIGN_README.md  JEANTRAIL_INTEGRATION_GUIDE.md  LAUNCH_v1.1.md  (+96 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 003_jean_orchestrator.sql  004_ecommerce_extension.sql  005_jean_ecommerce_enhancements.sql
src-tauri/src/: auto_api.rs  docker_monitor.rs  error.rs  jean_core.rs  jean_memory.rs  jean_model_hub.rs  jean_multilingual.rs  lib.rs  loyalty.rs  main.rs  models.rs  plugins.rs  prompt_engineering.rs  proxy.rs  security.rs  transport.rs
src-tauri/src/ecommerce/: pricing.rs  promotions.rs  scraper_integration.rs  suppliers.rs
src-tauri/src/routes/: jean.rs
(+718 files in other folders)
